src/nationalarchives/utilities/_typography.scss
@use "../variables/colour";
@use "../variables/typography";
@use "../tools/media";
@use "../tools/typography" as tools;

// Temporary - will eventually bundle font files into package
@import "https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Mono:wght@500;700&display=swap";
@import "https://use.typekit.net/hkj3kuz.css";

.tna-template {
  font-family: typography.$font-family-main;
  font-weight: typography.$font-weight-main;
  @include colour.colour-font("base-font");
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -webkit-text-size-adjust: none;
  direction: ltr;

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  ul,
  ol {
    margin-top: 0;
  }

  p {
    margin: 0 0 1.5rem;

    &:last-child {
      margin-bottom: 0;
    }
  }

  a {
    &:active {
      text-decoration-thickness: 4px;
    }

    &:hover {
      text-decoration-thickness: 3px;
    }
  }
}

.tna-template__body {
  color: inherit;
  @include tools.relative-font-size(16);
  line-height: 1.6;
}

.tna-ul,
.tna-ol {
  padding-left: 2rem;

  li::marker {
    color: #f0a;
    font-weight: 700;
  }

  &--plain {
    padding-left: 0;

    list-style: none;
  }
}

.tna-heading {
  margin-bottom: 1.5rem;

  color: colour.$tna-black;
  font-family: typography.$font-family-heading;
  font-weight: typography.$font-weight-heading;

  &:last-child {
    margin-bottom: 0;
  }

  &--xl {
    @include tools.relative-font-size(64);
    line-height: 1;

    @include media.on-medium {
      @include tools.relative-font-size(42);
    }

    @include media.on-mobile {
      @include tools.relative-font-size(36);
    }
  }

  &--l {
    @include tools.relative-font-size(32);
    line-height: 1.2;

    @include media.on-medium {
      @include tools.relative-font-size(26);
    }

    @include media.on-mobile {
      @include tools.relative-font-size(24);
    }
  }

  &--m {
    @include tools.relative-font-size(20);
    line-height: 1.4;
  }

  &--s {
    @include tools.relative-font-size(18);
    line-height: 1.6;
  }
}

.tna-hgroup {
  margin-bottom: 2rem;

  &:last-child {
    margin-bottom: 0;
  }

  &__supertitle {
    margin: 0;

    // color: colour.$base-font-colour;
    @include colour.colour-font("base-font");
    @include tools.relative-font-size(14);
    font-family: typography.$font-family-detail;
    font-weight: typography.$font-weight-detail;
    text-transform: uppercase;

    // .tna-hgroup & {
    //   margin: 0;
    // }
  }

  &__title {
    margin: 0;

    color: colour.$tna-black;

    .tna-hgroup__supertitle {
      display: block;

      // color: colour.$base-font-colour;
      @include colour.colour-font("base-font");
    }
  }

  &--xl {
    .tna-hgroup__supertitle {
    }

    .tna-hgroup__title {
      @include tools.relative-font-size(64);
    }
  }

  &--l {
    .tna-hgroup__supertitle {
    }

    .tna-hgroup__title {
      @include tools.relative-font-size(32);
    }
  }

  &--m {
    .tna-hgroup__supertitle {
    }

    .tna-hgroup__title {
      @include tools.relative-font-size(20);
    }
  }

  &--s {
    .tna-hgroup__supertitle {
    }

    .tna-hgroup__title {
      @include tools.relative-font-size(18);
    }
  }
}

